<resources>
    <string name="app_name">BookTable</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">411796735684193</string>
    <string name="title_activity_time_picker">TimePicker</string>
    <string name="title_activity_hotel_list">HotelList</string>
    <string name="title_activity_shared_menu">SharedMenu</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="menu_preorder">PreOrder</string>
    <string name="parse_app_id">nyNhfpzs0RL8ayy0312eyFfuJYFXmjuyFkYjVn9T</string>
    <string name="parse_client_key">k4ViZtiqik0iJRSq9uPkhjcztLioimWcAlNhIDqo</string>
    <string name="title_activity_dispatch">DispatchActivity</string>
    <string name="title_activity_hotel_profile">HotelProfileActivity</string>
    <string name="title_activity_time_pref">TimePrefActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_number_reg">NumberRegActivity</string>
    <string name="action_search">Search</string>
    <string name="com.crashlytics.android.build_id">c00ca919-258e-4215-a9d8-cdb4c2342dd1</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="common_android_wear_notification_needs_update_text">%1$s requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"%1$s won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="a_credit_of">"A credit of "</string>
    <string name="a_new_way_message">"Think of Reserve as a digital concierge. We'll keep you updated, but sometimes you'll have to wait a bit while we work our magic."</string>
    <string name="a_new_way_to_reserve">"A New Way To Reserve
"</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="accept">Accept</string>
    <string name="access_code">Access Code</string>
    <string name="access_code_blank_message">Please enter a valid access code to continue with registration.</string>
    <string name="account_alert_message">The information you entered is not valid. Please check your input, and try again</string>
    <string name="action_save">Save</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="add">Add</string>
    <string name="add_a_special_request">Add a special request</string>
    <string name="add_an_alternate_restaurant">Add an alternate restaurant</string>
    <string name="add_another_restaurant">Add Another Restaurant</string>
    <string name="add_optional_bid">Add Optional Bid</string>
    <string name="add_payment">Add Payment</string>
    <string name="add_payment_error_generic_message">Your card could not be saved. Please try again.</string>
    <string name="add_payment_method">Add Payment Method</string>
    <string name="add_promo_code">Add Promo Code</string>
    <string name="add_resturant_to_request">Add Restaurant To Request</string>
    <string name="add_to_calendar">Add to calendar</string>
    <string name="added">Added</string>
    <string name="adding_bid_msg">"Adding a bid may increase your chances of getting a table. "</string>
    <string name="adjust_app_token">wc4vgmbvyp93</string>
    <string name="adjust_environment">production</string>
    <string name="alertTitle">Oops!</string>
    <string name="already_on_wait_list_message">"You're already on our wait list."</string>
    <string name="already_on_wait_list_subtitle_message">"We’re rolling out slowly to make sure that everyone who joins has an excellent experience.

You’re already on our wait list, and we look forward to welcoming you as soon as we can."</string>
    <string name="alternate_accomodations">Alternate Accommodations</string>
    <string name="analytics_write_key">UTJdQTiGbhjizHZACrDE4IwemaiBibC8</string>
    <string name="apply">Apply</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="at">At</string>
    <string name="attire">Attire</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="average">Average</string>
    <string name="between">Between</string>
    <string name="breakfast">Breakfast</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_confirmed_message">"Reserve has access to great tables because we give our restaurants peace of mind that our diners will arrive.

I understand that plans change, but please do your best to honor your reservation."</string>
    <string name="cancel_request_message">"As your concierge, I can find you a great place to dine, even if your first choice isn't available. Text me for help.

By canceling, you'll withdraw your request from restaurants and forfeit your place on waitlists you may be on."</string>
    <string name="cancellation_error">Cancellation Error</string>
    <string name="cancellation_error_message">There was a problem cancelling your reservation.</string>
    <string name="cancellation_policy">Cancellation Policy</string>
    <string name="card_number">Card Number</string>
    <string name="check_email_message">Check your email for password reset instructions</string>
    <string name="choose_existing">Choose Existing</string>
    <string name="closed">Closed</string>
    <string name="closed_during_hours_msg">Closed during the hours you requested</string>
    <string name="closed_request_msg">is closed or not accepting reservations during this time.</string>
    <string name="code_invalid">Code Invalid</string>
    <string name="code_invalid_message">Sorry, but that code is not valid. Please try again.</string>
    <string name="connection_error">Connection Error</string>
    <string name="connection_error_message">Please ensure you have connectivity and try again.</string>
    <string name="contact_support">Contact Support</string>
    <string name="continue_text">Continue</string>
    <string name="continue_with_bid">Continue with Bid</string>
    <string name="continue_without_bid">Continue without bid</string>
    <string name="continue_without_code">Continue without code</string>
    <string name="menu">Menu</string>
    <string name="price">Price</string>
    <string name="request_a_table">Request A Table</string>
    <string name="website">Website</string>
</resources>